[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]
[ext_resource path="res://UI/Menu.gd" type="Script" id=2]
[ext_resource path="res://Asteroid/Asteroid.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/Player_Container.gd" type="Script" id=6]

[node name="Game" type="Node2D"]
__meta__ = {
"_editor_description_": "The root of the scene"
}

[node name="Player_Container" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Asteroid_Container" type="Node2D" parent="."]

[node name="Asteroid" parent="Asteroid_Container" instance=ExtResource( 4 )]
position = Vector2( 100, 100 )

[node name="Asteroid2" parent="Asteroid_Container" instance=ExtResource( 4 )]
position = Vector2( 800, 500 )

[node name="Effects" type="Node2D" parent="."]

[node name="Enemy_Container" type="Node2D" parent="."]

[node name="Enemy" parent="Enemy_Container" instance=ExtResource( 5 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="UI"]
margin_right = 40.0
margin_bottom = 14.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="Label" parent="UI"]
margin_right = 40.0
margin_bottom = 14.0
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="UI"]
autostart = true

[node name="Menu" type="Control" parent="UI"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/Menu"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.25098 )

[node name="Label" type="Label" parent="UI/Menu"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Quit" type="Button" parent="UI/Menu"]
margin_right = 12.0
margin_bottom = 20.0
text = "Quit"

[node name="Restart" type="Button" parent="UI/Menu"]
margin_right = 12.0
margin_bottom = 20.0
text = "Restart"

[connection signal="timeout" from="UI/Timer" to="UI" method="_on_Timer_timeout"]
[connection signal="pressed" from="UI/Menu/Quit" to="UI" method="_on_Quit_pressed"]
[connection signal="pressed" from="UI/Menu/Restart" to="UI" method="_on_Restart_pressed"]
